# literary-works

./: .gitignore  README.md  extract_raw.py  format.ipynb  pyproject.toml  test.ipynb
raw_data/: results.json
