[tool.poetry]
name = "literary-works"
version = "0.1.0"
description = ""
authors = ["Charles De Dampierre <charles.de-dampierre@hec.edu>"]
readme = "README.md"
packages = [{ include = "literary_works" }]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
